Fine tuned FR translations

--- a/config/locales/onboarding/fr.yml
+++ b/config/locales/onboarding/fr.yml
@@ -10,7 +10,7 @@ en:
           advice: "Jetez un oeil à <a href=\"http://support.sharetribe.com/knowledgebase/articles/744438\" target=\"_blank\" alt=\"How to get good-looking cover photos, logos, favicon, profiles and listing pictures?\">notre guide</a> pour trouver de superbes images libres de droits. <br/>Note : la photo sera redimensionnée en 1920x450 pixels. Si elle est trop grande, les parties hautes et basses de l'image seront coupées."
         filter:
           title: "Étape 4 : ajouter des champs d'annonces et des filtres"
-          description: "Les champs d'annonces structurent votre place de marché. Par exemple, si vous créez une place de marché pour vendre des chaussures d'occasion, vous devriez probablement ajouter un champ pour la pointure. Le vendeur devra aller préciser la taille de ses chaussures lors de la création d'une nouvelle annonce. Si vous souhaitez permettre à vos utilisateurs de filtrer les annonces par pointure, vous pouvez cocher la case <i>Afficher un filtre basé sur ce champ sur la page d'accueil</i> lors de la création du champ."
+          description: "Les champs d'annonces structurent votre place de marché. Par exemple, si vous créez une place de marché pour vendre des chaussures d'occasion, vous devriez probablement ajouter un champ pour la pointure. Le vendeur devra alors préciser la taille de ses chaussures lors du dépôt d'une nouvelle annonce. Si vous souhaitez permettre à vos utilisateurs de filtrer les annonces par pointure, vous pouvez cocher la case <i>Afficher un filtre basé sur ce champ sur la page d'accueil</i> lors de la création du champ."
           info_image_alt: "Copie d'écrance de la page des champs d'annonces et filtres"
           add_fields_and_filters: "Ajouter des champs et des filtres"
           advice: "Les filtres sont particulièrement utiles, mais <a target=\"_blank\" href=\"https://www.sharetribe.com/academy/how-to-help-your-customers-find-the-right-product-or-service/\">vous devriez éviter d'en ajouter trop</a>. Les utilisateurs seront perdus s'il y a trop de filtres et chaque filtre est un champ supplémentaire à remplir pour vos vendeurs."
@@ -53,8 +53,8 @@ en:
           title_done: "Terminé !"
           description_p1: "Pour bien démarrer votre place de marché, il y a quelques étapes importantes à suivre, détaillées ci-dessous."
           description_p2: "Une fois celles-ci complétées, votre place de marché sera prête à recevoir ses premiers visiteurs !"
-          congratulation_p1: "Vous avez réussi ! Votre place de marché est lancée. Mais ce n'est que le démarrage. Vous n'avez vu qu'une petite partie des possibilités de personnalisation offertes par Sharetribe. Pour en apprendre plus sur comment configurer votre place de marché, parcourez <a href='http://support.sharetribe.com/knowledgebase/articles/892140-what-to-do-after-the-basic-setup-of-your-marketpla' alt='knowledge base' target='_blank'>notre base de connaissance</a>."
-          congratulation_p2: "Si vous souhaitez apprendre comment faire de votre place de marché une entreprise, nous recommandons notre <a href='https://www.sharetribe.com/academy/guide/' alt='link to marketplace academy' target='_blank'>guide pratique pour créer une place de marché</a> (en anglais)."
+          congratulation_p1: "Vous avez réussi ! Votre place de marché est lancée. Mais ce n'est que le commencement. Vous n'avez aperçu qu'une petite partie des possibilités de personnalisation offertes par Sharetribe. Pour en apprendre plus sur comment configurer votre place de marché, parcourez <a href='http://support.sharetribe.com/knowledgebase/articles/892140-what-to-do-after-the-basic-setup-of-your-marketpla' alt='knowledge base' target='_blank'>notre base de connaissance</a>."
+          congratulation_p2: "Si vous souhaitez apprendre comment faire de votre place de marché une réussite, nous recommandons notre <a href='https://www.sharetribe.com/academy/guide/' alt='link to marketplace academy' target='_blank'>guide pratique pour créer une place de marché</a> (en anglais)."
           congratulation_p3: "Si vous avez la moindre questions, n'hésitez pas à <a data-uv-trigger='contact' href='mailto:support@sharetribe.com' title='Support'>contacter notre support</a>, nous serons ravis de vous aider !"
           create_your_marketplace: "Créer votre place de marché"
           slogan_and_description: "Écrire un slogan et une description"
@@ -71,7 +71,7 @@ en:
           button: "Écrivez les vôtres !"
         cover_photo:
           title: "Félicitations, étape complétée !"
-          body: "Bravo, continuons ! Une jolie photo de couverture aura un fort impact sur la première impression ressentie par vos nouveaux visiteurs. C'est le moment d'ajouter la vôtre !"
+          body: "Bravo, continuons ! Une jolie photo de couverture fera forte impression sur vos nouveaux visiteurs. C'est le moment d'ajouter la vôtre !"
           button: "Télécharger une photo de couverture"
         filter:
           title: "Magnifique !"
@@ -87,11 +87,11 @@ en:
           button: "Déposer votre première annonce"
         invitation:
           title: "...et maintenant la dernière étape : partager votre place de marché !"
-          body: "Satisfait de votre place de marché ? Alors commençons à inviter des utilisateurs !"
+          body: "Satisfait de votre place de marché ? Alors commencez à inviter des utilisateurs !"
           button: "Inviter des utilisateurs"
         all_done:
           title: "Excellent, vous avez réussi !"
-          body: "Félicitations ! Votre place de marche est maintenant bien lancée. Mais ce n'est que ce début. Nous sommes là pour vous aider tout au long de votre projet."
+          body: "Félicitations ! Votre place de marche est maintenant bien lancée. Mais ce n'est que le début. Nous sommes là pour vous aider tout au long de votre projet."
           button: "Voir quoi faire ensuite"
         button_later: "Non merci, je le ferai plus tard"
       topbar:
