--- a/config/locales/onboarding/fr.yml
+++ b/config/locales/onboarding/fr.yml
@@ -12,7 +12,7 @@ fr:
               content1: "Jetez un oeil à %{link} pour trouver de superbes images libres de droits."
               content2: "Note : la photo sera redimensionnée en %{width}x%{height} pixels. Si elle est trop grande, les parties hautes et basses de l'image seront coupées."
               link: "notre guide"
-              alt: "How to get good-looking cover photos, logos, favicon, profiles and listing pictures?"
+              alt: "Comment obtenir de belles photos de couvertures, des logos, des favicon, des images de profil et d'annonces?"
           filter:
             title: "Étape 4 : ajouter des champs d'annonces et des filtres"
             description:
