--- a/config/locales/onboarding/nl.yml
+++ b/config/locales/onboarding/nl.yml
@@ -16,8 +16,8 @@ nl:
           filter:
             title: "Stap 4: Voeg item velden en filters toe"
             description:
-              content: "Item velden bepalen de structuur van je marktplaats. Bijvoorbeeld, als je een marktplaats bouwt for tweedehands schoenen, dan wil je waarschijnlijk wel een filter voor schoenmaat toevoegen. De verkoper zal dan de schoenmaat moeten toevoegen als deze een paar schoenen te koop aanbiedt. Als je je de kopers het aanbod op schoenmaakt wil laten filteren, tik dan de box %{display_on_homepage} aan, wanneer je het veld creëert."
-              display_on_homepage: "Toon een filter gebaseerd op dit veld, op de home pagina."
+              content: "Item velden bepalen de structuur van je marktplaats. Bijvoorbeeld, als je een marktplaats bouwt voor tweedehands schoenen, dan wil je waarschijnlijk wel een filter voor schoenmaat toevoegen. De verkoper zal dan de schoenmaat moeten toevoegen als deze een paar schoenen te koop aanbiedt. Als je de kopers het aanbod op schoenmaat wil laten filteren, tik dan de box %{display_on_homepage} aan, wanneer je het veld creëert."
+              display_on_homepage: "Toon een filter gebaseerd op dit veld, op de home pagina"
             info_image_alt: "Een screenshot van een pagina met item velden en filters"
             add_fields_and_filters: "Voeg item velden en filters toe"
             advice:
@@ -49,7 +49,7 @@ nl:
             invitation: "Nodig gebruikers uit"
           paypal:
             title: "Stap 5: Accepteer betalingen"
-            description_p1: "Als je je leveranciers online betalingen wilt laten ontvangen (en om zelf commissie van iedere transactie te ontvangen), dan dien je je PayPal account koppelen. Eenmaal gekoppeld, dien je een minimale transactie prijs en een commissie kiezen."
+            description_p1: "Als je je leveranciers online betalingen wilt laten ontvangen (en jijzelf commissie van iedere transactie wilt ontvangen), dan dien je je PayPal account te koppelen. Eenmaal gekoppeld, dien je een minimale transactie prijs en een commissie kiezen."
             description_p2: "Je kunt ook kiezen om online betalingen voorlopig uit te schakelen."
             info_image_alt: "Een screenshot van de betalingen-pagina"
             disable_payments: "Schakel betalingen uit"
@@ -113,15 +113,15 @@ nl:
           button: "Schrijf de jouwe!"
         cover_photo:
           title: "Top, taak volbracht!"
-          body: "Goed gedaan, ga zo door! Een goede cover photo heeft een enorme invloed op de indruk die een nieuwe bezoeker krijgt. Voeg zelf een goede afbeelding toe!"
+          body: "Op naar de volgende: een goede cover photo heeft een enorme invloed op de indruk die een nieuwe bezoeker krijgt. Voeg zelf een goede afbeelding toe!"
           button: "Upload een afbeelding"
         filter:
           title: "Ziet er goed uit!"
-          body: "Laten we nu eens aan de functionaliteit werken. Item velden en filters geven structuur aan je marktplaats en helpen je bezoekers te vinden waar zij voor komen."
+          body: "Nu gaan we aan de functionaliteit werken. Item velden en filters geven structuur aan je marktplaats en helpen je bezoekers te vinden waar zij voor komen."
           button: "Voeg velden & filters toe"
         paypal:
-          title: "Super! "
-          body: "Hierna, de betalingen van je marktplaats in- of uitschakelen! Om leveranciers online betalingen te laten ontvangen, koppel dan je PayPal account. Je kunt betalingen ook voorlopig uitschakelen."
+          title: "Super, goed bezig! "
+          body: "Hierna: de betalingen van je marktplaats in- of uitschakelen. Om leveranciers online betalingen te laten ontvangen, koppel dan je PayPal account. Je kunt betalingen ook voorlopig uitschakelen."
           button: "Betalingen instellen"
         listing:
           title: "Goed gedaan!"
