--- a/config/locales/pt-PT.yml
+++ b/config/locales/pt-PT.yml
@@ -87,7 +87,7 @@ pt-PT:
         small_cover_photo_visibility: "Foto pequena da capa mostrado para utilizadores não conectados."
         small_cover_photo_instructions_text_with_dimensions: ~
         main_content_width: ~
-        custom_color1_instructions_text: "Você pode mudar a cor principal da interface de utilizador desta comunidade, inserindo um valor de cor hex. <a href=\"http://www.colorpicker.com/?colorcode=D96E21\" target=\"_blank\"> ColorPicker.com </a> pode ajudar você a escolher a cor e copie o código aqui."
+        custom_color1_instructions_text: "Você pode mudar a cor principal da interface de utilizador desta comunidade, inserindo um valor de cor hex. <a href=\"http://www.colorpicker.com/?colorcode=D96E21\" target=\"_blank\" rel=\"noreferrer\"> ColorPicker.com </a> pode ajudar você a escolher a cor e copie o código aqui."
         custom_color2_instructions_text: ~
         default_browse_view: ~
         default_browse_view_instructions_text: ~
