--- a/config/locales/zh-HK.yml
+++ b/config/locales/zh-HK.yml
@@ -97,7 +97,7 @@ zh-HK:
         small_cover_photo_visibility: 小的封面照片將顯示在未登錄用戶的首頁之外的所有頁面。
         small_cover_photo_instructions_text_with_dimensions: ~
         main_content_width: ~
-        custom_color1_instructions_text: "你可以通過輸入十六進制色彩值改變用戶接口的主體顏色。<a href=\"http://www.colorpicker.com/?colorcode=D96E21\" target=\"_blank\">ColorPicker.com</a>可以幫助你選擇顏色並且復制色彩代碼。"
+        custom_color1_instructions_text: "你可以通過輸入十六進制色彩值改變用戶接口的主體顏色。<a href=\"http://www.colorpicker.com/?colorcode=D96E21\" target=\"_blank\" rel=\"noreferrer\">ColorPicker.com</a>可以幫助你選擇顏色並且復制色彩代碼。"
         custom_color2_instructions_text: ~
         default_browse_view: ~
         default_browse_view_instructions_text: 主頁使用默認瀏覽的顯示來設置訊息的默認展示方式。
